Modify the settlement interface

--- a/index.html
+++ b/index.html
@@ -359,9 +359,9 @@
                 <div class="card border-info mt-5" style="width: 18rem;">
                     <div class="card-header">结算界面</div>
                     <div class="card-body">
-                        <p class="card-text">答对：${correctCnt}</p>
-                        <p class="card-text">答错：${wrongCnt}</p>
-                        <p class="card-text">答漏：${missCnt}</p>
+                        <p class="card-text">完全正确：${correctCnt}</p>
+                        <p class="card-text">部分正确：${missCnt}</p>
+                        <p class="card-text">回答错误：${wrongCnt}</p>
                     </div>
                 </div>
             `;
